y.output
Grammar

    0 $accept: lines $end

    1 lines: line
    2      | lines line

    3 line: consulta ';' '\n'
    4     | insert ';' '\n'

    5 consulta: consultSelect
    6         | consulta ORDENAR listaColumnas
    7         | consulta ORDENAR listaColumnas ORDEN
    8         | consulta FINAL INTEGER

    9 consultSelect: SELECT listaColumnas FROM TABLA
   10              | consultSelect WHERE condicion
   11              | consultSelect AGRUPAR listaColumnas

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'
   13       | INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

   15 listaColumnas: colString
   16              | colInt
   17              | listaColumnas ',' listaColumnas

   18 condicion: colString operadorSimple TEXTO
   19          | colInt operadorSimple INTEGER
   20          | colString LIKE TEXTO
   21          | colInt BETWEEN INTEGER AND INTEGER
   22          | colString BETWEEN TEXTO AND TEXTO
   23          | colString IN '(' listaTexto ')'
   24          | colInt IN '(' listaInteger ')'
   25          | colString CNULL
   26          | colInt CNULL
   27          | condicion AND condicion
   28          | condicion OR condicion

   29 listaInteger: INTEGER
   30             | colInt
   31             | listaInteger ',' listaInteger

   32 listaTexto: TEXTO
   33           | colString
   34           | listaTexto ',' listaTexto


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4
    '(' (40) 12 13 14 23 24
    ')' (41) 12 13 14 23 24
    ',' (44) 12 13 14 17 31 34
    ';' (59) 3 4
    error (256)
    AND (258) 21 22 27
    OR (259) 28
    INTEGER (260) 8 12 13 14 19 21 29
    SELECT (261) 9
    FROM (262) 9
    WHERE (263) 10
    colInt (264) 12 13 14 16 19 21 24 26 30
    TABLA (265) 9 12 13 14
    operadorSimple (266) 18 19
    TEXTO (267) 12 13 14 18 20 22 32
    BETWEEN (268) 21 22
    IN (269) 23 24
    LIKE (270) 20
    CNULL (271) 25 26
    ORDEN (272) 7
    ORDENAR (273) 6 7
    AGRUPAR (274) 11
    INSERT (275) 12 13 14
    INTO (276) 12 13 14
    VALUES (277) 12 13 14
    colString <cadena> (278) 12 13 14 15 18 20 22 23 25 33
    FINAL <cadena> (279) 8


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    lines (31)
        on left: 1 2
        on right: 0 2
    line (32)
        on left: 3 4
        on right: 1 2
    consulta (33)
        on left: 5 6 7 8
        on right: 3 6 7 8
    consultSelect (34)
        on left: 9 10 11
        on right: 5 10 11
    insert (35)
        on left: 12 13 14
        on right: 4
    listaColumnas (36)
        on left: 15 16 17
        on right: 6 7 9 11 17
    condicion (37)
        on left: 18 19 20 21 22 23 24 25 26 27 28
        on right: 10 27 28
    listaInteger (38)
        on left: 29 30 31
        on right: 24 31
    listaTexto (39)
        on left: 32 33 34
        on right: 23 34


State 0

    0 $accept: • lines $end

    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2

    lines          go to state 3
    line           go to state 4
    consulta       go to state 5
    consultSelect  go to state 6
    insert         go to state 7


State 1

    9 consultSelect: SELECT • listaColumnas FROM TABLA

    colInt     shift, and go to state 8
    colString  shift, and go to state 9

    listaColumnas  go to state 10


State 2

   12 insert: INSERT • INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'
   13       | INSERT • INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT • INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    INTO  shift, and go to state 11


State 3

    0 $accept: lines • $end
    2 lines: lines • line

    $end    shift, and go to state 12
    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2

    line           go to state 13
    consulta       go to state 5
    consultSelect  go to state 6
    insert         go to state 7


State 4

    1 lines: line •

    $default  reduce using rule 1 (lines)


State 5

    3 line: consulta • ';' '\n'
    6 consulta: consulta • ORDENAR listaColumnas
    7         | consulta • ORDENAR listaColumnas ORDEN
    8         | consulta • FINAL INTEGER

    ';'      shift, and go to state 14
    ORDENAR  shift, and go to state 15
    FINAL    shift, and go to state 16


State 6

    5 consulta: consultSelect •
   10 consultSelect: consultSelect • WHERE condicion
   11              | consultSelect • AGRUPAR listaColumnas

    WHERE    shift, and go to state 17
    AGRUPAR  shift, and go to state 18

    $default  reduce using rule 5 (consulta)


State 7

    4 line: insert • ';' '\n'

    ';'  shift, and go to state 19


State 8

   16 listaColumnas: colInt •

    $default  reduce using rule 16 (listaColumnas)


State 9

   15 listaColumnas: colString •

    $default  reduce using rule 15 (listaColumnas)


State 10

    9 consultSelect: SELECT listaColumnas • FROM TABLA
   17 listaColumnas: listaColumnas • ',' listaColumnas

    ','   shift, and go to state 20
    FROM  shift, and go to state 21


State 11

   12 insert: INSERT INTO • TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'
   13       | INSERT INTO • TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO • TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    TABLA  shift, and go to state 22


State 12

    0 $accept: lines $end •

    $default  accept


State 13

    2 lines: lines line •

    $default  reduce using rule 2 (lines)


State 14

    3 line: consulta ';' • '\n'

    '\n'  shift, and go to state 23


State 15

    6 consulta: consulta ORDENAR • listaColumnas
    7         | consulta ORDENAR • listaColumnas ORDEN

    colInt     shift, and go to state 8
    colString  shift, and go to state 9

    listaColumnas  go to state 24


State 16

    8 consulta: consulta FINAL • INTEGER

    INTEGER  shift, and go to state 25


State 17

   10 consultSelect: consultSelect WHERE • condicion

    colInt     shift, and go to state 26
    colString  shift, and go to state 27

    condicion  go to state 28


State 18

   11 consultSelect: consultSelect AGRUPAR • listaColumnas

    colInt     shift, and go to state 8
    colString  shift, and go to state 9

    listaColumnas  go to state 29


State 19

    4 line: insert ';' • '\n'

    '\n'  shift, and go to state 30


State 20

   17 listaColumnas: listaColumnas ',' • listaColumnas

    colInt     shift, and go to state 8
    colString  shift, and go to state 9

    listaColumnas  go to state 31


State 21

    9 consultSelect: SELECT listaColumnas FROM • TABLA

    TABLA  shift, and go to state 32


State 22

   12 insert: INSERT INTO TABLA • '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'
   13       | INSERT INTO TABLA • '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO TABLA • '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    '('  shift, and go to state 33


State 23

    3 line: consulta ';' '\n' •

    $default  reduce using rule 3 (line)


State 24

    6 consulta: consulta ORDENAR listaColumnas •
    7         | consulta ORDENAR listaColumnas • ORDEN
   17 listaColumnas: listaColumnas • ',' listaColumnas

    ','    shift, and go to state 20
    ORDEN  shift, and go to state 34

    $default  reduce using rule 6 (consulta)


State 25

    8 consulta: consulta FINAL INTEGER •

    $default  reduce using rule 8 (consulta)


State 26

   19 condicion: colInt • operadorSimple INTEGER
   21          | colInt • BETWEEN INTEGER AND INTEGER
   24          | colInt • IN '(' listaInteger ')'
   26          | colInt • CNULL

    operadorSimple  shift, and go to state 35
    BETWEEN         shift, and go to state 36
    IN              shift, and go to state 37
    CNULL           shift, and go to state 38


State 27

   18 condicion: colString • operadorSimple TEXTO
   20          | colString • LIKE TEXTO
   22          | colString • BETWEEN TEXTO AND TEXTO
   23          | colString • IN '(' listaTexto ')'
   25          | colString • CNULL

    operadorSimple  shift, and go to state 39
    BETWEEN         shift, and go to state 40
    IN              shift, and go to state 41
    LIKE            shift, and go to state 42
    CNULL           shift, and go to state 43


State 28

   10 consultSelect: consultSelect WHERE condicion •
   27 condicion: condicion • AND condicion
   28          | condicion • OR condicion

    AND  shift, and go to state 44
    OR   shift, and go to state 45

    $default  reduce using rule 10 (consultSelect)


State 29

   11 consultSelect: consultSelect AGRUPAR listaColumnas •
   17 listaColumnas: listaColumnas • ',' listaColumnas

    ','  shift, and go to state 20

    $default  reduce using rule 11 (consultSelect)


State 30

    4 line: insert ';' '\n' •

    $default  reduce using rule 4 (line)


State 31

   17 listaColumnas: listaColumnas • ',' listaColumnas
   17              | listaColumnas ',' listaColumnas •

    $default  reduce using rule 17 (listaColumnas)


State 32

    9 consultSelect: SELECT listaColumnas FROM TABLA •

    $default  reduce using rule 9 (consultSelect)


State 33

   12 insert: INSERT INTO TABLA '(' • colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'
   13       | INSERT INTO TABLA '(' • colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO TABLA '(' • colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    colInt     shift, and go to state 46
    colString  shift, and go to state 47


State 34

    7 consulta: consulta ORDENAR listaColumnas ORDEN •

    $default  reduce using rule 7 (consulta)


State 35

   19 condicion: colInt operadorSimple • INTEGER

    INTEGER  shift, and go to state 48


State 36

   21 condicion: colInt BETWEEN • INTEGER AND INTEGER

    INTEGER  shift, and go to state 49


State 37

   24 condicion: colInt IN • '(' listaInteger ')'

    '('  shift, and go to state 50


State 38

   26 condicion: colInt CNULL •

    $default  reduce using rule 26 (condicion)


State 39

   18 condicion: colString operadorSimple • TEXTO

    TEXTO  shift, and go to state 51


State 40

   22 condicion: colString BETWEEN • TEXTO AND TEXTO

    TEXTO  shift, and go to state 52


State 41

   23 condicion: colString IN • '(' listaTexto ')'

    '('  shift, and go to state 53


State 42

   20 condicion: colString LIKE • TEXTO

    TEXTO  shift, and go to state 54


State 43

   25 condicion: colString CNULL •

    $default  reduce using rule 25 (condicion)


State 44

   27 condicion: condicion AND • condicion

    colInt     shift, and go to state 26
    colString  shift, and go to state 27

    condicion  go to state 55


State 45

   28 condicion: condicion OR • condicion

    colInt     shift, and go to state 26
    colString  shift, and go to state 27

    condicion  go to state 56


State 46

   12 insert: INSERT INTO TABLA '(' colInt • ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    ','  shift, and go to state 57


State 47

   13 insert: INSERT INTO TABLA '(' colString • ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO TABLA '(' colString • ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    ','  shift, and go to state 58


State 48

   19 condicion: colInt operadorSimple INTEGER •

    $default  reduce using rule 19 (condicion)


State 49

   21 condicion: colInt BETWEEN INTEGER • AND INTEGER

    AND  shift, and go to state 59


State 50

   24 condicion: colInt IN '(' • listaInteger ')'

    INTEGER  shift, and go to state 60
    colInt   shift, and go to state 61

    listaInteger  go to state 62


State 51

   18 condicion: colString operadorSimple TEXTO •

    $default  reduce using rule 18 (condicion)


State 52

   22 condicion: colString BETWEEN TEXTO • AND TEXTO

    AND  shift, and go to state 63


State 53

   23 condicion: colString IN '(' • listaTexto ')'

    TEXTO      shift, and go to state 64
    colString  shift, and go to state 65

    listaTexto  go to state 66


State 54

   20 condicion: colString LIKE TEXTO •

    $default  reduce using rule 20 (condicion)


State 55

   27 condicion: condicion • AND condicion
   27          | condicion AND condicion •
   28          | condicion • OR condicion

    $default  reduce using rule 27 (condicion)


State 56

   27 condicion: condicion • AND condicion
   28          | condicion • OR condicion
   28          | condicion OR condicion •

    $default  reduce using rule 28 (condicion)


State 57

   12 insert: INSERT INTO TABLA '(' colInt ',' • colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    colString  shift, and go to state 67


State 58

   13 insert: INSERT INTO TABLA '(' colString ',' • colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'
   14       | INSERT INTO TABLA '(' colString ',' • colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    colInt     shift, and go to state 68
    colString  shift, and go to state 69


State 59

   21 condicion: colInt BETWEEN INTEGER AND • INTEGER

    INTEGER  shift, and go to state 70


State 60

   29 listaInteger: INTEGER •

    $default  reduce using rule 29 (listaInteger)


State 61

   30 listaInteger: colInt •

    $default  reduce using rule 30 (listaInteger)


State 62

   24 condicion: colInt IN '(' listaInteger • ')'
   31 listaInteger: listaInteger • ',' listaInteger

    ','  shift, and go to state 71
    ')'  shift, and go to state 72


State 63

   22 condicion: colString BETWEEN TEXTO AND • TEXTO

    TEXTO  shift, and go to state 73


State 64

   32 listaTexto: TEXTO •

    $default  reduce using rule 32 (listaTexto)


State 65

   33 listaTexto: colString •

    $default  reduce using rule 33 (listaTexto)


State 66

   23 condicion: colString IN '(' listaTexto • ')'
   34 listaTexto: listaTexto • ',' listaTexto

    ','  shift, and go to state 74
    ')'  shift, and go to state 75


State 67

   12 insert: INSERT INTO TABLA '(' colInt ',' colString • ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    ','  shift, and go to state 76


State 68

   13 insert: INSERT INTO TABLA '(' colString ',' colInt • ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'

    ','  shift, and go to state 77


State 69

   14 insert: INSERT INTO TABLA '(' colString ',' colString • ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    ','  shift, and go to state 78


State 70

   21 condicion: colInt BETWEEN INTEGER AND INTEGER •

    $default  reduce using rule 21 (condicion)


State 71

   31 listaInteger: listaInteger ',' • listaInteger

    INTEGER  shift, and go to state 60
    colInt   shift, and go to state 61

    listaInteger  go to state 79


State 72

   24 condicion: colInt IN '(' listaInteger ')' •

    $default  reduce using rule 24 (condicion)


State 73

   22 condicion: colString BETWEEN TEXTO AND TEXTO •

    $default  reduce using rule 22 (condicion)


State 74

   34 listaTexto: listaTexto ',' • listaTexto

    TEXTO      shift, and go to state 64
    colString  shift, and go to state 65

    listaTexto  go to state 80


State 75

   23 condicion: colString IN '(' listaTexto ')' •

    $default  reduce using rule 23 (condicion)


State 76

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' • colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    colString  shift, and go to state 81


State 77

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' • colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'

    colString  shift, and go to state 82


State 78

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' • colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    colInt  shift, and go to state 83


State 79

   31 listaInteger: listaInteger • ',' listaInteger
   31             | listaInteger ',' listaInteger •

    $default  reduce using rule 31 (listaInteger)


State 80

   34 listaTexto: listaTexto • ',' listaTexto
   34           | listaTexto ',' listaTexto •

    $default  reduce using rule 34 (listaTexto)


State 81

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString • ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    ')'  shift, and go to state 84


State 82

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString • ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'

    ')'  shift, and go to state 85


State 83

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt • ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    ')'  shift, and go to state 86


State 84

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' • VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')'

    VALUES  shift, and go to state 87


State 85

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' • VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')'

    VALUES  shift, and go to state 88


State 86

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' • VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')'

    VALUES  shift, and go to state 89


State 87

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES • '(' INTEGER ',' TEXTO ',' TEXTO ')'

    '('  shift, and go to state 90


State 88

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES • '(' TEXTO ',' INTEGER ',' TEXTO ')'

    '('  shift, and go to state 91


State 89

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES • '(' TEXTO ',' TEXTO ',' INTEGER ')'

    '('  shift, and go to state 92


State 90

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' • INTEGER ',' TEXTO ',' TEXTO ')'

    INTEGER  shift, and go to state 93


State 91

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' • TEXTO ',' INTEGER ',' TEXTO ')'

    TEXTO  shift, and go to state 94


State 92

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' • TEXTO ',' TEXTO ',' INTEGER ')'

    TEXTO  shift, and go to state 95


State 93

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER • ',' TEXTO ',' TEXTO ')'

    ','  shift, and go to state 96


State 94

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO • ',' INTEGER ',' TEXTO ')'

    ','  shift, and go to state 97


State 95

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO • ',' TEXTO ',' INTEGER ')'

    ','  shift, and go to state 98


State 96

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' • TEXTO ',' TEXTO ')'

    TEXTO  shift, and go to state 99


State 97

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' • INTEGER ',' TEXTO ')'

    INTEGER  shift, and go to state 100


State 98

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' • TEXTO ',' INTEGER ')'

    TEXTO  shift, and go to state 101


State 99

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO • ',' TEXTO ')'

    ','  shift, and go to state 102


State 100

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER • ',' TEXTO ')'

    ','  shift, and go to state 103


State 101

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO • ',' INTEGER ')'

    ','  shift, and go to state 104


State 102

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' • TEXTO ')'

    TEXTO  shift, and go to state 105


State 103

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' • TEXTO ')'

    TEXTO  shift, and go to state 106


State 104

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' • INTEGER ')'

    INTEGER  shift, and go to state 107


State 105

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO • ')'

    ')'  shift, and go to state 108


State 106

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO • ')'

    ')'  shift, and go to state 109


State 107

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER • ')'

    ')'  shift, and go to state 110


State 108

   12 insert: INSERT INTO TABLA '(' colInt ',' colString ',' colString ')' VALUES '(' INTEGER ',' TEXTO ',' TEXTO ')' •

    $default  reduce using rule 12 (insert)


State 109

   13 insert: INSERT INTO TABLA '(' colString ',' colInt ',' colString ')' VALUES '(' TEXTO ',' INTEGER ',' TEXTO ')' •

    $default  reduce using rule 13 (insert)


State 110

   14 insert: INSERT INTO TABLA '(' colString ',' colString ',' colInt ')' VALUES '(' TEXTO ',' TEXTO ',' INTEGER ')' •

    $default  reduce using rule 14 (insert)
